--- a/Fish_Image_Detection?.ipynb
+++ b/Fish_Image_Detection?.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "gpuType": "T4",
       "mount_file_id": "1z4vSnBRAXp-j3WKkB1aD_Xl1UngHp6hT",
-      "authorship_tag": "ABX9TyNnejt4iCWLBSjvj3FpuyV4",
+      "authorship_tag": "ABX9TyNGKXTu2qZ/LjZY7AQNYoNa",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,8 +30,26 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# **Fish Image Detection Finalternm**"
+      ],
+      "metadata": {
+        "id": "QbZtp7AoI7ka"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Potongan kode tersebut berfungsi untuk **menyiapkan seluruh pustaka yang dibutuhkan dalam pengembangan dan evaluasi model klasifikasi citra berbasis Convolutional Neural Network (CNN)**. Library `os` digunakan untuk pengelolaan dan navigasi direktori dataset, sedangkan `numpy` dimanfaatkan untuk operasi numerik seperti manipulasi array dan pengolahan label. `matplotlib.pyplot` digunakan untuk visualisasi hasil, termasuk grafik performa model dan distribusi probabilitas prediksi. Framework `tensorflow` beserta modul `keras` digunakan untuk membangun, melatih, dan mengevaluasi arsitektur CNN melalui komponen layer dan model. `ImageDataGenerator` disediakan untuk mempermudah proses pemuatan citra serta penerapan augmentasi data selama pelatihan, sementara `compute_class_weight` dari `sklearn` digunakan untuk menghitung bobot kelas guna menangani ketidakseimbangan jumlah data antar kelas, sehingga proses pelatihan model menjadi lebih adil dan representatif.\n"
+      ],
+      "metadata": {
+        "id": "OPbyFIyiI6kC"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "lXnsN91Cg2QH"
       },
@@ -43,8 +61,17 @@
         "import tensorflow as tf\n",
         "from tensorflow.keras import layers, models\n",
         "from tensorflow.keras.preprocessing.image import ImageDataGenerator\n",
-        "from sklearn.utils.class_weight import compute_class_weight\n"
+        "from sklearn.utils.class_weight import compute_class_weight"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Potongan kode tersebut digunakan untuk **mendefinisikan parameter dasar dan konfigurasi utama** yang menjadi acuan dalam proses pelatihan model klasifikasi citra ikan berbasis CNN. Variabel `IMG_SIZE` menentukan ukuran citra input yang akan diseragamkan menjadi 224×224 piksel agar sesuai dengan arsitektur model. `BATCH_SIZE` mengatur jumlah citra yang diproses dalam satu iterasi pelatihan, sedangkan `EPOCHS` menentukan berapa kali seluruh dataset training dilalui oleh model selama proses pembelajaran. Selain itu, `DATASET_PATH_TRAIN` dan `DATASET_PATH_VAL` digunakan untuk menunjuk lokasi direktori dataset training dan validation yang tersimpan di Google Drive, sehingga model dapat memuat data secara terstruktur berdasarkan kelas selama proses training dan evaluasi.\n"
+      ],
+      "metadata": {
+        "id": "3jzsRxZBJLiA"
+      }
     },
     {
       "cell_type": "code",
@@ -58,8 +85,17 @@
       "metadata": {
         "id": "Z61wHXhphMCm"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Potongan program tersebut digunakan untuk **mempersiapkan data training dan validation dengan menerapkan preprocessing serta augmentasi citra** sebelum digunakan dalam pelatihan model CNN. `ImageDataGenerator` pada data training berfungsi melakukan normalisasi nilai piksel melalui `rescale=1./255` serta augmentasi data seperti rotasi, pergeseran, zoom, dan pembalikan horizontal untuk meningkatkan variasi data dan mengurangi risiko overfitting. Sementara itu, `ImageDataGenerator` pada data validasi hanya melakukan normalisasi tanpa augmentasi agar evaluasi model merepresentasikan kondisi data asli. Fungsi `flow_from_directory` kemudian digunakan untuk memuat citra secara otomatis dari direktori dataset berdasarkan struktur folder kelas, menyesuaikan ukuran citra dengan `IMG_SIZE`, membentuk batch sesuai `BATCH_SIZE`, serta menghasilkan label dalam format kategorikal. Parameter `subset` dimanfaatkan untuk membagi data menjadi bagian training dan validation sesuai proporsi yang telah ditentukan.\n"
+      ],
+      "metadata": {
+        "id": "sPo-_tUfJ15g"
+      }
     },
     {
       "cell_type": "code",
@@ -102,7 +138,7 @@
         "id": "49bF7ufmhNdF",
         "outputId": "ce41c479-7380-4793-edfd-b26f189891b2"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -113,6 +149,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Potongan kode tersebut digunakan untuk **menghitung bobot kelas (*class weight*) guna menangani ketidakseimbangan jumlah data antar kelas pada dataset training**. Variabel `labels` mengambil label kelas dari seluruh data training yang dihasilkan oleh `train_generator`, kemudian fungsi `compute_class_weight` menghitung bobot tiap kelas dengan skema *balanced*, sehingga kelas dengan jumlah data lebih sedikit akan diberikan bobot yang lebih besar. Hasil perhitungan ini kemudian disusun ke dalam bentuk dictionary melalui `class_weight_dict`, di mana setiap indeks kelas dipetakan ke bobotnya masing-masing. Dictionary ini selanjutnya dapat digunakan pada proses pelatihan model agar CNN tidak bias terhadap kelas mayoritas dan mampu belajar secara lebih adil dari seluruh kelas yang tersedia.\n"
+      ],
+      "metadata": {
+        "id": "pQQEvhxZJ2_P"
+      }
     },
     {
       "cell_type": "code",
@@ -134,7 +179,7 @@
         "id": "FzD4sJE9hPNE",
         "outputId": "d24a70f1-0b4c-40ec-ad8b-5c5984c61bd6"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -144,6 +189,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Potongan kode tersebut mendefinisikan **arsitektur Convolutional Neural Network (CNN) untuk tugas klasifikasi citra ikan multi-kelas** menggunakan pendekatan *sequential*. Model diawali dengan tiga blok konvolusi bertingkat, masing-masing terdiri dari `Conv2D` dengan ukuran kernel 3×3 dan fungsi aktivasi ReLU untuk mengekstraksi fitur visual seperti tepi, tekstur, dan pola tingkat tinggi, yang diikuti oleh `MaxPooling2D` untuk mereduksi dimensi spasial dan menekan kompleksitas komputasi. Setelah fitur spasial diekstraksi, layer `Flatten` mengubah feature map menjadi vektor satu dimensi yang kemudian diproses oleh `Dense` layer dengan 128 neuron untuk pembelajaran representasi tingkat tinggi. Layer `Dropout` dengan rasio 0.5 diterapkan sebagai mekanisme regularisasi untuk mengurangi risiko overfitting selama pelatihan. Terakhir, layer output `Dense` dengan fungsi aktivasi softmax dan jumlah neuron sesuai dengan `train_generator.num_classes` digunakan untuk menghasilkan distribusi probabilitas prediksi pada setiap kelas ikan.\n"
+      ],
+      "metadata": {
+        "id": "qfo69sNdL7FI"
+      }
     },
     {
       "cell_type": "code",
@@ -171,7 +225,7 @@
         "id": "K_kUb0uXhQgu",
         "outputId": "f32d5578-e273-404c-cba7-af7ccd36425a"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -182,6 +236,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Potongan kode tersebut digunakan untuk **mengonfigurasi dan memverifikasi arsitektur model CNN sebelum proses pelatihan dilakukan**. Fungsi `model.compile()` menetapkan **optimizer Adam** sebagai metode optimisasi untuk memperbarui bobot jaringan secara adaptif, **loss function categorical crossentropy** yang sesuai untuk masalah klasifikasi multi-kelas dengan label one-hot encoding, serta **metrik akurasi** untuk mengukur performa prediksi model selama training dan validasi. Setelah model dikompilasi, perintah `model.summary()` digunakan untuk menampilkan ringkasan arsitektur jaringan secara terstruktur, termasuk urutan layer, dimensi output setiap layer, serta jumlah parameter yang dapat dilatih dan tidak dapat dilatih, sehingga dapat memastikan bahwa desain model telah sesuai dengan spesifikasi input dan tujuan klasifikasi sebelum proses training dijalankan.\n"
+      ],
+      "metadata": {
+        "id": "mwC2lOEWOYuA"
+      }
     },
     {
       "cell_type": "code",
@@ -202,7 +265,7 @@
         "id": "m2q2lfCohR6m",
         "outputId": "2ac149fa-0d84-4ba5-e5e0-4e091fdce7cb"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -316,6 +379,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Potongan kode tersebut digunakan untuk **melatih model CNN menggunakan data training dan mengevaluasi performanya pada data validasi**. Fungsi `model.fit()` menjalankan proses pembelajaran dengan mengambil data dari `train_generator`, di mana bobot model diperbarui selama sejumlah `EPOCHS` berdasarkan nilai loss yang dihitung. Parameter `validation_data=val_generator` memungkinkan model dievaluasi pada data yang tidak digunakan untuk training pada setiap epoch, sehingga performa generalisasi dapat dipantau. Selain itu, parameter `class_weight=class_weight_dict` diterapkan untuk **menangani ketidakseimbangan jumlah data antar kelas**, dengan memberikan penalti yang lebih besar pada kesalahan prediksi kelas minoritas. Seluruh riwayat proses pelatihan, termasuk nilai loss dan akurasi untuk data training dan validasi di setiap epoch, disimpan dalam variabel `history` untuk keperluan analisis dan visualisasi performa model.\n"
+      ],
+      "metadata": {
+        "id": "UBRoIYJNOa4B"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "history = model.fit(\n",
@@ -332,7 +404,7 @@
         "id": "1OylmGMdiCJl",
         "outputId": "620a8db2-bcbc-4be8-9df5-aaaebb7973e7"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -371,6 +443,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Potongan kode tersebut digunakan untuk **mengevaluasi performa akhir model CNN pada data validasi setelah proses pelatihan selesai**. Fungsi `model.evaluate()` menghitung nilai **loss** dan **akurasi** dengan menggunakan `val_generator`, yaitu data yang tidak dilibatkan dalam proses training sehingga merepresentasikan kemampuan generalisasi model. Nilai `val_loss` menunjukkan tingkat kesalahan prediksi model pada data validasi, sedangkan `val_acc` menunjukkan proporsi prediksi yang benar. Hasil akurasi kemudian ditampilkan dalam format persentase dua angka desimal, sehingga memberikan gambaran kuantitatif yang ringkas mengenai seberapa baik model mampu mengklasifikasikan data yang belum pernah dilihat selama pelatihan.\n"
+      ],
+      "metadata": {
+        "id": "GMagPw2FOjYB"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "val_loss, val_acc = model.evaluate(val_generator)\n",
@@ -383,7 +464,7 @@
         "id": "P7UTb_BThUCF",
         "outputId": "adaf08d7-e605-4928-9443-cc802c6aab41"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -394,6 +475,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Potongan kode tersebut digunakan untuk **memvisualisasikan kinerja model CNN selama proses pelatihan dalam bentuk grafik akurasi dan loss**. Grafik pertama menampilkan perbandingan **akurasi data training dan data validasi** pada setiap epoch, yang berfungsi untuk menunjukkan sejauh mana model mampu mempelajari pola dari data latih serta mempertahankan performa pada data yang tidak dilibatkan dalam pelatihan. Grafik kedua menampilkan **loss training dan loss validasi**, yang menggambarkan perubahan tingkat kesalahan model seiring bertambahnya epoch. Dengan menampilkan kedua grafik ini secara berdampingan, pengguna dapat menganalisis stabilitas proses pembelajaran, mengidentifikasi indikasi overfitting atau underfitting, serta mengevaluasi apakah model telah mencapai performa yang optimal sebelum atau sesudah jumlah epoch yang ditentukan.\n"
+      ],
+      "metadata": {
+        "id": "ITihxRhkOn7f"
+      }
     },
     {
       "cell_type": "code",
@@ -422,7 +512,7 @@
         "id": "k-tf4CL6hWHl",
         "outputId": "3e70c1bc-28bd-484e-c4ee-ac4e8d01c097"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -457,7 +547,7 @@
         "id": "0oGanzH3hXdF",
         "outputId": "88a5766b-4bfb-40f7-ed46-c4c8992dea00"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -504,7 +594,7 @@
         "id": "f2oCydY9Aqtj",
         "outputId": "41800698-f5ad-45c6-9278-c7bf161f0ea2"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -553,7 +643,7 @@
         "id": "4nyLsI9DAxP5",
         "outputId": "0408aa3b-8348-472b-dc46-bb478949a885"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -577,7 +667,7 @@
       "metadata": {
         "id": "zdO2mkM-Ax7_"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -597,7 +687,7 @@
         "id": "71N_d3WGA1rh",
         "outputId": "f469a7c4-0820-44e0-dd09-90cf6f0e43f1"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -660,7 +750,7 @@
         "id": "JNTFBkViBRrf",
         "outputId": "2f9cdd98-42a4-4c7e-c01a-d1d8cdf0e041"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -704,7 +794,7 @@
         "model.save('my_fish_model.keras')\n",
         "print(\"Model saved to my_fish_model.keras\")"
       ],
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -725,7 +815,7 @@
       "metadata": {
         "id": "-YBavH0XBjEp"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -747,8 +837,17 @@
       "metadata": {
         "id": "IgzCRcTnBncv"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Potongan kode tersebut digunakan untuk **menghasilkan daftar nama kelas secara otomatis berdasarkan struktur direktori dataset training** yang dimuat melalui `train_generator`. Atribut `class_indices` menyediakan pemetaan antara nama kelas dan indeks numeriknya, yang kemudian dibalik dengan cara membuat list `class_names` berukuran sama dengan jumlah kelas (`train_generator.num_classes`) dan mengisi setiap posisi indeks dengan nama kelas yang sesuai. Pendekatan ini memastikan bahwa urutan nama kelas **konsisten dengan indeks output model** pada layer softmax, sehingga hasil prediksi dapat diinterpretasikan dengan benar tanpa harus mendefinisikan nama kelas secara manual. Baris `print` di akhir digunakan untuk memverifikasi jumlah kelas yang berhasil dihasilkan serta menampilkan beberapa nama kelas awal sebagai pengecekan bahwa pemetaan kelas telah dilakukan dengan benar.\n"
+      ],
+      "metadata": {
+        "id": "qfgRZ7i1Ovqh"
+      }
     },
     {
       "cell_type": "code",
@@ -775,7 +874,7 @@
         "id": "5GD6VUp9Bxii",
         "outputId": "6a901fa0-2b23-4010-de74-566e10de07b3"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -786,6 +885,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Potongan kode tersebut mendefinisikan sebuah fungsi `detect_fish` yang digunakan untuk **melakukan inferensi atau prediksi jenis ikan pada satu citra uji menggunakan model CNN yang telah dilatih**. Gambar yang diberikan melalui parameter `img_path` terlebih dahulu diproses menggunakan fungsi `preprocess_image` agar sesuai dengan format input model, kemudian dimensinya diperluas menjadi satu batch menggunakan `np.expand_dims`. Model kemudian menghasilkan vektor probabilitas untuk seluruh kelas ikan melalui fungsi `model.predict`, di mana indeks dengan nilai probabilitas tertinggi ditentukan sebagai hasil prediksi menggunakan `np.argmax`, sementara tingkat keyakinan model diambil dari nilai maksimum probabilitas tersebut. Nama kelas hasil prediksi diperoleh dari daftar `class_names` yang telah disesuaikan dengan indeks output model. Terakhir, citra input ditampilkan kembali dengan anotasi berupa nama jenis ikan yang terdeteksi dan nilai confidence, sehingga hasil klasifikasi dapat dipahami secara visual dan mudah diinterpretasikan.\n"
+      ],
+      "metadata": {
+        "id": "_EgMSIXMO09L"
+      }
     },
     {
       "cell_type": "code",
@@ -808,7 +916,7 @@
       "metadata": {
         "id": "9YB4M0G9B5U3"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -824,7 +932,7 @@
         "id": "K0UTiJo9B6zf",
         "outputId": "ae32a426-d0f8-4895-ba02-9fe3ac1119e9"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -858,7 +966,7 @@
         "id": "0y6TMmlcCHcX",
         "outputId": "0e972804-5a24-4bce-d17b-82c4ba232711"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -892,7 +1000,7 @@
         "id": "RFta8-1BCQ2w",
         "outputId": "fec16831-ee00-4750-eb8f-a10a8c0ffee2"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -926,7 +1034,7 @@
         "id": "POyINPzJChSw",
         "outputId": "514e934e-3bfb-4d5e-86c5-319b4f67d8a3"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
