--- a/finalterm_regresi.ipynb
+++ b/finalterm_regresi.ipynb
@@ -22,8 +22,17 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/sudo-KingJahad/finalterm-machine-learning/blob/main/midterm_regresi.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/sudo-KingJahad/finalterm-machine-learning/blob/main/finalterm_regresi.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **Finalterm Regresi**"
+      ],
+      "metadata": {
+        "id": "tGB26-mcWxyR"
+      }
     },
     {
       "cell_type": "markdown",
@@ -571,6 +580,15 @@
     {
       "cell_type": "markdown",
       "source": [
+        "Output program menunjukkan bahwa dataset berhasil dimuat dengan ukuran 5 baris dan 91 kolom. Namun karena file CSV tidak memiliki header, Pandas secara default menganggap baris pertama sebagai nama kolom, sehingga nilai data seperti 2001 tampil sebagai header. Hal ini menyebabkan struktur data terlihat tidak normal. Dataset sebenarnya terdiri dari satu kolom target dan puluhan fitur numerik, sehingga perlu dibaca ulang tanpa header agar pemisahan fitur dan target dapat dilakukan dengan benar sebelum membangun model regresi."
+      ],
+      "metadata": {
+        "id": "w6DHFG2EVshY"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "**4. Mengukur bentuk Dataset**"
       ],
       "metadata": {
@@ -599,6 +617,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Output df.shape menunjukkan bahwa dataset memiliki 515.344 baris dan 91 kolom. Setiap baris merepresentasikan satu sampel data, sedangkan jumlah kolom mencakup satu variabel target dan 90 fitur numerik. Hal ini sesuai dengan karakteristik dataset regresi berdimensi tinggi, di mana kolom pertama berfungsi sebagai target dan kolom lainnya sebagai fitur yang digunakan dalam proses pemodelan."
+      ],
+      "metadata": {
+        "id": "g2j5O1z6V3nh"
+      }
     },
     {
       "cell_type": "markdown",
@@ -637,6 +664,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Output program menunjukkan bahwa ukuran file dataset adalah sekitar 443.423.087 bytes atau setara dengan 422,88 MB. Ukuran file yang besar ini mengindikasikan bahwa dataset memiliki jumlah data dan fitur yang sangat banyak, sehingga memerlukan sumber daya komputasi yang memadai serta pengelolaan memori yang efisien. Oleh karena itu, proses pemuatan data, preprocessing, dan pelatihan model perlu dirancang dengan hati-hati agar tidak menimbulkan kendala performa."
+      ],
+      "metadata": {
+        "id": "1bDdCeUBV84p"
+      }
     },
     {
       "cell_type": "markdown",
@@ -1143,6 +1179,15 @@
     {
       "cell_type": "markdown",
       "source": [
+        "Output program menunjukkan bahwa dataset berhasil dimuat dengan benar menggunakan header=None, sehingga seluruh baris data dibaca sebagai nilai dan tidak terjadi kesalahan struktur kolom. Kolom pertama kemudian diberi nama Year yang merepresentasikan variabel target, sedangkan 90 kolom lainnya merupakan fitur numerik. Tampilan lima baris pertama menunjukkan struktur data yang sudah rapi dan siap digunakan untuk proses analisis dan pemodelan regresi."
+      ],
+      "metadata": {
+        "id": "mUK4WyOKWNDR"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "**8. Data Cleaning (Menangani Missing Values)**\n",
         "\n",
         "Penjelasan: Ini adalah tahap Data Cleaning. Dataset di dunia nyata seringkali memiliki nilai yang hilang (kosong/NaN). Jika dibiarkan, program akan error. Di sini kita menggunakan teknik Imputasi Mean. Artinya, jika ada kotak yang kosong pada suatu kolom, kita akan mengisinya dengan nilai rata-rata dari kolom tersebut. Ini cara yang aman agar data tetap bisa dipakai."
@@ -1190,6 +1235,15 @@
     {
       "cell_type": "markdown",
       "source": [
+        "Output program menunjukkan bahwa dataset telah berhasil dipisahkan menjadi fitur dan target, kemudian dibagi menjadi data training dan data testing dengan rasio 80% dan 20%. Dari total data, sebanyak 412.276 baris digunakan untuk pelatihan dan 103.069 baris digunakan untuk pengujian, masing-masing dengan 90 fitur. Selanjutnya, dilakukan standardisasi fitur menggunakan StandardScaler agar seluruh fitur berada pada skala yang seragam, sehingga model regresi dapat bekerja secara optimal."
+      ],
+      "metadata": {
+        "id": "XJKzJW99WTqB"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "**9. Pemisahan Fitur (X) dan Target (Y)**\n",
         "\n",
         "Penjelasan: Komputer perlu tahu mana data yang harus dipelajari dan mana jawaban yang harus ditebak.\n",
@@ -1229,6 +1283,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Output program menunjukkan bahwa model Ridge Regression berhasil dilatih menggunakan data training yang telah distandarisasi. Model ini menggunakan regularisasi L2 dengan parameter alpha sebesar 1.0 untuk mengurangi risiko overfitting akibat banyaknya fitur. Setelah proses pelatihan selesai, model siap digunakan untuk melakukan prediksi pada data uji dan dievaluasi kinerjanya."
+      ],
+      "metadata": {
+        "id": "mflyG3ZuWa9Z"
+      }
     },
     {
       "cell_type": "markdown",
@@ -1287,6 +1350,22 @@
     {
       "cell_type": "markdown",
       "source": [
+        "Hasil evaluasi menunjukkan bahwa model Ridge Regression menghasilkan nilai RMSE sebesar 9,52, yang berarti rata-rata kesalahan prediksi tahun rilis lagu adalah sekitar 9,5 tahun. Nilai R² sebesar 0,2380 menunjukkan bahwa model mampu menjelaskan sekitar 23,8% variasi pada data target. Hasil ini mengindikasikan bahwa meskipun model telah menangkap sebagian pola dalam data, masih terdapat keterbatasan dalam kemampuan prediksi secara akurat."
+      ],
+      "metadata": {
+        "id": "VQu--etGWkZh"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "5wJKAiUOWe7p"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "**11. Data Preprocessing (Standard Scaling)**\n",
         "\n",
         "Penjelasan: Fitur audio seringkali punya rentang angka yang berbeda jauh (misal: satu kolom nilainya 0.001, kolom lain 5000). Algoritma Regresi bisa bingung dan menganggap angka 5000 lebih penting. StandardScaler mengubah semua angka sehingga memiliki skala yang seimbang (rata-rata 0, deviasi standar 1). Ini membuat model belajar lebih cepat dan akurat."
@@ -1328,6 +1407,15 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Grafik Actual vs Predicted Release Year menunjukkan hubungan antara tahun rilis lagu sebenarnya dan hasil prediksi model Ridge Regression. Garis diagonal merah merepresentasikan prediksi sempurna, di mana nilai prediksi sama dengan nilai aktual. Sebaran titik yang cukup jauh dari garis diagonal menunjukkan bahwa model masih memiliki tingkat kesalahan prediksi yang cukup besar, meskipun secara umum model mampu menangkap tren hubungan antara fitur audio dan tahun rilis lagu."
+      ],
+      "metadata": {
+        "id": "ClrEKURqWuYp"
+      }
     }
   ]
 }
