--- a/finalterm_transaction_data.ipynb
+++ b/finalterm_transaction_data.ipynb
@@ -22,7 +22,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/sudo-KingJahad/finalterm-machine-learning/blob/main/midterm_transaction_data.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/sudo-KingJahad/finalterm-machine-learning/blob/main/finalterm_transaction_data.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -126,6 +126,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Output program menunjukkan bahwa dataset train_transaction memiliki 590.540 baris dan 394 kolom, sedangkan test_transaction memiliki 506.691 baris dan 393 kolom. Perbedaan jumlah kolom ini disebabkan oleh keberadaan satu kolom tambahan pada data training, yaitu variabel target isFraud, yang tidak terdapat pada data testing. Hal ini sesuai dengan skema supervised learning, di mana data training digunakan untuk melatih model dan data testing digunakan untuk menghasilkan prediksi."
+      ],
+      "metadata": {
+        "id": "rh4fm_v1XVhR"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "train_transaction.head() #isFraud adalah target featurenya"
@@ -174,6 +183,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Output train_transaction.head() menampilkan lima baris pertama dari dataset training yang terdiri dari 394 kolom. Dataset ini memuat satu kolom target yaitu isFraud, yang menunjukkan apakah suatu transaksi bersifat penipuan atau tidak, serta ratusan fitur transaksi seperti TransactionID, TransactionDT, TransactionAmt, informasi kartu, alamat, email domain, dan variabel turunan lainnya. Tampilan ini mengonfirmasi bahwa struktur dataset telah terbaca dengan benar dan siap digunakan untuk proses preprocessing dan pemodelan klasifikasi."
+      ],
+      "metadata": {
+        "id": "Y2UbPkrdXdEg"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "test_transaction.head() #uji data baru, setelah pembuatan model machine learningnya"
@@ -220,6 +238,15 @@
           "execution_count": 4
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Output test_transaction.head() menampilkan lima baris pertama dari dataset uji yang terdiri dari 393 kolom. Dataset ini berisi fitur-fitur transaksi yang sama dengan data training, namun tidak memiliki kolom target isFraud. Data ini digunakan sebagai data baru untuk menghasilkan prediksi probabilitas fraud menggunakan model machine learning yang telah dilatih sebelumnya."
+      ],
+      "metadata": {
+        "id": "H9pjy5KtXuSo"
+      }
     },
     {
       "cell_type": "markdown",
@@ -273,6 +300,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Kode program ini digunakan untuk menyiapkan lingkungan kerja pada Google Colab dengan memuat library yang dibutuhkan untuk analisis data, visualisasi, dan pemodelan machine learning. Proses drive.mount() dilakukan untuk menghubungkan Google Drive ke Colab agar dataset berukuran besar dapat diakses langsung. Pesan Drive already mounted menunjukkan bahwa Google Drive telah berhasil terhubung dan siap digunakan tanpa perlu proses mounting ulang."
+      ],
+      "metadata": {
+        "id": "xOrAY1fDYA-7"
+      }
     },
     {
       "cell_type": "markdown",
@@ -334,6 +370,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Output program menunjukkan bahwa data training dan data testing berhasil dimuat dari Google Drive dengan masing-masing ukuran 100.000 × 394 dan 50.000 × 393. Penggunaan sampling dilakukan untuk menghindari keterbatasan memori pada Google Colab. Distribusi target isFraud memperlihatkan ketidakseimbangan kelas yang signifikan, di mana sekitar 97,44% transaksi tergolong non-fraud dan hanya sekitar 2,56% transaksi yang merupakan fraud."
+      ],
+      "metadata": {
+        "id": "OrIgyNRkYFlb"
+      }
     },
     {
       "cell_type": "markdown",
@@ -409,6 +454,15 @@
     {
       "cell_type": "markdown",
       "source": [
+        "Kode preprocessing ini menghapus kolom TransactionID karena hanya berfungsi sebagai identitas dan tidak memiliki nilai prediktif. Selanjutnya, fitur dipisahkan menjadi 14 fitur kategorikal dan 378 fitur numerik. Fitur kategorikal diubah menjadi representasi numerik menggunakan Label Encoding agar dapat diproses oleh model machine learning, sedangkan nilai kosong pada fitur numerik diisi dengan nilai khusus untuk menandai data yang hilang. Setelah tahap ini, dataset telah siap digunakan untuk pelatihan model klasifikasi."
+      ],
+      "metadata": {
+        "id": "0bNQ0m-MYMJp"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "Langkah 4: Splitting Data (Stratified)\n",
         "\n",
         "Penjelasan: Karena jumlah penipu sangat sedikit (misal hanya 3%), kita tidak boleh membagi data secara acak sembarangan. Kita harus menggunakan Stratified Split. Ini menjamin bahwa persentase penipu di data latihan (Train) dan data validasi (Validation) tetap sama (misal tetap 3%)."
@@ -449,6 +503,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Output menunjukkan bahwa data telah dipisahkan menjadi data training dan data validation dengan rasio 80% dan 20%, sehingga diperoleh 80.000 data untuk pelatihan dan 20.000 data untuk validasi, masing-masing dengan 392 fitur. Penggunaan stratified split memastikan proporsi kelas fraud dan non-fraud tetap seimbang pada kedua subset, yang sangat penting dalam kasus klasifikasi dengan data yang tidak seimbang."
+      ],
+      "metadata": {
+        "id": "REn2mnupYTfr"
+      }
     },
     {
       "cell_type": "markdown",
@@ -495,6 +558,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Output program menunjukkan bahwa model Random Forest berhasil dilatih menggunakan data training dengan pengaturan class_weight='balanced' untuk menangani ketidakseimbangan kelas pada data fraud detection. Parameter max_depth digunakan untuk membatasi kompleksitas model dan menghemat penggunaan memori, sementara n_jobs=-1 memungkinkan pemanfaatan seluruh inti CPU. Setelah proses pelatihan selesai, model siap digunakan untuk evaluasi dan prediksi."
+      ],
+      "metadata": {
+        "id": "mM6yoZBlYd8I"
+      }
     },
     {
       "cell_type": "markdown",
@@ -573,6 +645,15 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Hasil evaluasi menunjukkan bahwa model Random Forest menghasilkan nilai ROC-AUC sebesar 0,8960, yang menandakan kemampuan pemisahan kelas fraud dan non-fraud yang sangat baik. Confusion matrix menunjukkan bahwa model berhasil mengklasifikasikan sebagian besar transaksi normal dengan benar, serta mampu mendeteksi lebih dari separuh transaksi fraud. Nilai recall untuk kelas fraud sebesar 0,54 menunjukkan bahwa model cukup efektif dalam menangkap transaksi fraud, meskipun masih terdapat beberapa kesalahan klasifikasi."
+      ],
+      "metadata": {
+        "id": "IhK1w0Y_YjmB"
+      }
     },
     {
       "cell_type": "markdown",
@@ -907,13 +988,13 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "Output program menunjukkan bahwa model Random Forest yang telah dilatih digunakan untuk memprediksi probabilitas fraud pada data test yang tidak memiliki label. Prediksi dilakukan dalam bentuk probabilitas isFraud, sehingga setiap transaksi memperoleh nilai peluang terjadinya fraud antara 0 dan 1. Hasil prediksi kemudian digabungkan dengan TransactionID dan disimpan dalam bentuk file CSV sebagai output akhir yang siap digunakan untuk evaluasi atau proses submission."
+      ],
       "metadata": {
-        "id": "Llp80lkLcQsF"
-      },
-      "execution_count": null,
-      "outputs": []
+        "id": "GAMH_dbhYswo"
+      }
     }
   ]
 }
